--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
       })
 
       //Create feature layer of Survey123 points.
-      //const layer = new FeatureLayer({
-      //  url:"https://services.arcgis.com/HRPe58bUyBqyyiCt/arcgis/rest/services/survey123_a9b18bee27d340f59cc3375fd97b66cf_results/FeatureServer"
-      //});
+      const layer = new FeatureLayer({
+        url:"https://services.arcgis.com/HRPe58bUyBqyyiCt/arcgis/rest/services/service_b137fb451ca84456940bd07e87e6c7e5/FeatureServer"
+        
+      });
 
-      //map.add(layer);
+      map.add(layer);
 
     });
 
@@ -96,7 +97,7 @@
 </head>
 <body>
 
-  <a href="https://arcg.is/1Xru8z"target="_blank" class="addRecordBtn">Add Record</a>
+  <a href="https://arcg.is/1TvSez0"target="_blank" class="addRecordBtn">Add Record</a>
 
   <div id="viewDiv"></div>
 
