--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
   <!-- Loading the modules. -->
   <script>
-    require(["esri/config", "esri/Map", "esri/views/MapView", "esri/widgets/Locate", "esri/widgets/Search", "esri/layers/FeatureLayer" ], 
-    (esriConfig, Map, MapView, Locate, Search, FeatureLayer) => {
+    require(["esri/config", "esri/Map", "esri/views/MapView", "esri/widgets/Locate", "esri/widgets/Search", "esri/layers/FeatureLayer","esri/widgets/Legend" ], 
+    (esriConfig, Map, MapView, Locate, Search, FeatureLayer, Legend) => {
 
       esriConfig.apiKey = "AAPKcf47264e32794af29b8505a640992140dTOZDTXkDMXGQTuCncQfjuHjEesD1DFlJERirFncgdHb7Ok0f1ko4f6m-N_jnQ8N";
       
@@ -58,6 +58,13 @@
       });
 
       map.add(layer);
+
+      //Add legend widget to the map.
+      const legend = new Legend({
+        view: view
+      });
+      
+      view.ui.add(legend, "bottom-right");
 
     });
 
