Fixed basemap typo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       
       //Add map.
       const map = new Map({
-        basemap: "dark-grey-vector"
+        basemap: "dark-gray-vector"
       });
 
       //Add mapview
