--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
       });
 
       //Create feature layer of Survey123 points.
-      //const layer = new FeatureLayer({
-        //url:"https://services.arcgis.com/HRPe58bUyBqyyiCt/arcgis/rest/services/survey123_bdaccb60f2054ef3b6e2d5fa5e665ecc_results/FeatureServer"
-      //});
+      const layer = new FeatureLayer({
+        url:"https://services.arcgis.com/HRPe58bUyBqyyiCt/arcgis/rest/services/survey123_bdaccb60f2054ef3b6e2d5fa5e665ecc_results/FeatureServer"
+      });
 
-      //map.add(layer);
+      map.add(layer);
 
       //Add legend widget to the map.
       const legend = new Legend({
