--- a/index.html
+++ b/index.html
@@ -66,6 +66,26 @@
       
       view.ui.add(legend, "bottom-right");
 
+      //Add labels to identify the disaster incidents.
+      const disasterLabels = {
+        symbol: {
+            type: "text",
+            color: "#FFFFFF",
+            haloColor: "#5E8D74",
+            haloSize: "2px",
+            font: {
+              size: "12px",
+              family: "Noto Sans",
+              style: "italic",
+              weight: "normal"
+            }
+          },
+          labelPlacement: "above-center",
+          labelExpressionInfo: {
+            expression: "$feature.DisType"
+          }
+        };
+    
     });
 
   </script>
