--- a/index.html
+++ b/index.html
@@ -57,13 +57,12 @@
         symbol: {
           type: "text",
           color: "#FFFFFF",
-          haloColor: "#5E8D74",
+          haloColor: "blue",
           haloSize: "2px",
           font: {
-            size: "12px",
-            family: "Noto Sans",
-            style: "italic",
-            weight: "normal"
+            "family": "Arial",
+            "style": "normal",
+            "weight": "bold"
           }
         },
 
