Change search bar location.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       
       //Adds the search widget to the map with top left position, and below the locate button. 
       view.ui.add(searchWidget, {
-        position: "top-left",
+        position: "bottom-left",
         index: 2
       });
 
