--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       const layer = new FeatureLayer({
         url:"https://services.arcgis.com/HRPe58bUyBqyyiCt/arcgis/rest/services/survey123_bdaccb60f2054ef3b6e2d5fa5e665ecc_results/FeatureServer",
         labelingInfo: [disasterLabels],
-        renderer = renderer
+        renderer: renderer
       });
 
       map.add(layer);
