Syntax for renderer again

--- a/index.html
+++ b/index.html
@@ -76,26 +76,26 @@
       const renderer = {
         type: "unique-value",  
         field: "DisGroup",
-        defaultSymbol: { type: "simple-fill" },  
-        uniqueValueInfos: [{
+        uniqueValueInfos: [
+          {
           value: "Clim",
           symbol: {
             type: "simple-fill", 
             color: "red"
           }
-        }, {
+          }, {
           value: "Met",
           symbol: {
             type: "simple-fill", 
             color: "purple"
           }
-        }, {
+          }, {
           value: "Hydro",
           symbol: {
             type: "simple-fill",
             color: "blue"
           }
-        }, {
+          }, {
           value: "Geo",
           symbol: {
             type: "simple-fill",
