Changed symbol types

--- a/index.html
+++ b/index.html
@@ -60,25 +60,25 @@
           {
             value: "Clim",
             symbol: {
-              type: "simple-fill", 
+              type: "point", 
               color: "red"
             }
           }, {
             value: "Met",
             symbol: {
-              type: "simple-fill", 
+              type: "point", 
               color: "purple"
             }
           }, {
             value: "Hydro",
             symbol: {
-              type: "simple-fill",
+              type: "point",
               color: "blue"
             }
           }, {
             value: "Geo",
             symbol: {
-              type: "simple-fill",
+              type: "point",
               color: "green"
             }
           }  
