--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 </head>
 <body>
 
-  <a href="https://arcg.is/1TvSez0"target="_blank" class="addRecordBtn">Add Record</a>
+  <a href="https://arcg.is/1TvSez0"target="_blank" class="addRecordBtn">Report Disaster</a>
 
   <div id="viewDiv"></div>
 
