Change zoom level.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       const view = new MapView({
         map: map,
         center: [-104.9903, 39.7392], // Longitude, latitude
-        zoom: 10, // Zoom level
+        zoom: 8, // Zoom level
         container: "viewDiv" // Div element
       });
       
@@ -52,7 +52,7 @@
         index: 1
       });
 
-      //Add thhe scale bar to the map.
+      //Add the scale bar to the map.
       const scaleBar = new ScaleBar({
         view: view
       });
