Working on popup templates. Removed legend for now.

--- a/index.html
+++ b/index.html
@@ -125,11 +125,15 @@
       map.add(layer);
 
       //Add legend widget to the map.
-      const legend = new Legend({
-        view: view,
-      });
+      //const legend = new Legend({
+        //view: view,
+      //});
       
-      view.ui.add(legend, "bottom-right");
+      //view.ui.add(legend, "bottom-right");
+
+      const template = {
+        title: "Disaster at {IncidentLocation}"
+      };
 
     });
 
