--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
   <!-- Loading the modules. -->
   <script>
-    require(["esri/config", "esri/Map", "esri/views/MapView", "esri/widgets/Locate", "esri/widgets/Search", "esri/widgets/ScaleBar", "esri/layers/FeatureLayer","esri/renderers/UniqueValueRenderer", "esri/widgets/Legend" ], 
-    (esriConfig, Map, MapView, Locate, Search, ScaleBar, FeatureLayer, UniqueValueRenderer, Legend) => {
+    require(["esri/config", "esri/Map", "esri/views/MapView", "esri/widgets/Locate", "esri/widgets/Search","esri/widgets/Compass", "esri/widgets/ScaleBar", "esri/layers/FeatureLayer","esri/renderers/UniqueValueRenderer", "esri/widgets/Legend" ], 
+    (esriConfig, Map, MapView, Locate, Search, Compass, ScaleBar, FeatureLayer, UniqueValueRenderer, Legend) => {
 
       esriConfig.apiKey = "AAPKcf47264e32794af29b8505a640992140dTOZDTXkDMXGQTuCncQfjuHjEesD1DFlJERirFncgdHb7Ok0f1ko4f6m-N_jnQ8N";
       
@@ -51,6 +51,14 @@
         position: "bottom-left",
         index: 1
       });
+
+      //Add the compas widget.
+      let compass = new Compass({
+        view: view
+      });
+      
+      // Add the compass to the top left corner of the MapView
+      view.ui.add(compass, "top-left");
 
       //Add the scale bar to the map.
       const scaleBar = new ScaleBar({
