Working on popup template, and added title to feature layer.

--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
       //Create feature layer of Survey123 points.
       const layer = new FeatureLayer({
         url:"https://services.arcgis.com/HRPe58bUyBqyyiCt/arcgis/rest/services/survey123_bdaccb60f2054ef3b6e2d5fa5e665ecc_results/FeatureServer",
+        title: "Disasters in the United States",
+        popupTemplate: popupTemplate,
         renderer: renderer,
         labelingInfo: [disasterLabels]
       });
