--- a/index.html
+++ b/index.html
@@ -123,20 +123,24 @@
         }
       };
 
-      const popupTemplate = {
-        title: "Disaster at {IncidentLocation}"
-      };
+      //const popupTemplate = {
+        //title: "Disaster at {IncidentLocation}"
+      //};
 
       //Create feature layer of Survey123 points.
       const layer = new FeatureLayer({
         url:"https://services.arcgis.com/HRPe58bUyBqyyiCt/arcgis/rest/services/survey123_bdaccb60f2054ef3b6e2d5fa5e665ecc_results/FeatureServer",
         title: "Disasters in the United States",
-        popupTemplate: popupTemplate,
+        //popupTemplate: popupTemplate,
         renderer: renderer,
         labelingInfo: [disasterLabels]
       });
 
       map.add(layer);
+
+      layer.popupTemplate = {
+        title: "Disaster at {IncidentLocation}"
+      };
 
       //Add legend widget to the map.
       //const legend = new Legend({
