--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       map.add(layer);
 
       layer.popupTemplate = {
-        title: "Disaster at {IncidentLocation}"
+        title: "{DisGroup} at {IncidentLocation}"
       };
 
       //Add legend widget to the map.
