--- a/index.html
+++ b/index.html
@@ -123,23 +123,30 @@
         }
       };
 
-      //const popupTemplate = {
-        //title: "Disaster at {IncidentLocation}"
-      //};
-
       //Create feature layer of Survey123 points.
       const layer = new FeatureLayer({
         url:"https://services.arcgis.com/HRPe58bUyBqyyiCt/arcgis/rest/services/survey123_bdaccb60f2054ef3b6e2d5fa5e665ecc_results/FeatureServer",
         title: "Disasters in the United States",
-        //popupTemplate: popupTemplate,
         renderer: renderer,
         labelingInfo: [disasterLabels]
       });
 
       map.add(layer);
 
+      //Define popups for points on the map.
       layer.popupTemplate = {
-        title: "{DisGroup} at {IncidentLocation}"
+        title: "{DisGroup}",
+        content: [
+          {
+            type: "fields",
+            fieldInfos: [
+              {
+                fieldName: "IncidentTime",
+                label: "Incident Time"
+              }
+            ]
+          }
+        ]
       };
 
       //Add legend widget to the map.
