Finishing popup edits.

--- a/index.html
+++ b/index.html
@@ -143,6 +143,18 @@
               {
                 fieldName: "IncidentTime",
                 label: "Incident Time"
+              },
+              {
+                fieldName: "IncidentLocation",
+                label: "Incident Location"
+              },
+              {
+                fieldName: "DisType",
+                label: "Disaster Type"
+              },
+              {
+                fieldName: "UserNotes",
+                label: "User Notes"
               }
             ]
           }
