Commenting out legend widget since it crowds UI on mobile devices.

--- a/index.html
+++ b/index.html
@@ -162,12 +162,13 @@
         ]
       };
 
+      //This portion commented out for now since it crowds the UI in the mobile version of the application. 
       //Add legend widget to the map.
-      const legend = new Legend({
-        view: view,
-      });
+      //const legend = new Legend({
+        //view: view,
+      //});
       
-      view.ui.add(legend, "bottom-right");
+      //view.ui.add(legend, "bottom-right");
 
     });
 
