--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-  <title>Natural Hazard Monitor</title>
+  <title>Natural Hazard Monitor Test</title>
 
   <!-- Meta for the browser to allow for mobile first design. -->
   <meta charset="UTF-8" />
