Change the info-button's style

--- a/index.html
+++ b/index.html
@@ -210,12 +210,32 @@
 
 
 
+    #info-btn {
+        padding: 10px 20px; /* Adjust padding to make the button larger */
+        font-size: 16px; /* Adjust font size for the button text */
+        background-color: #0079c1; /* Add background color to the button */
+        color: #fff; /* Set text color to white */
+        border: none; /* Remove border */
+        border-radius: 5px; /* Add border radius for rounded corners */
+        cursor: pointer; /* Change cursor to pointer on hover */
+        margin-top: 5px; /* Add margin-top to create space above the map */
+    }
+
+
+    #info-btn:hover {
+        background-color: #005a87; /* Darker background color on hover */
+    }
+
     #info-container {
         display: none;
         margin-top: 20px;
         padding: 10px;
         border: 1px solid #ccc;
         border-radius: 5px;
+    }
+
+    #viewDiv {
+        margin-top: 5px; /* Add margin-top to create space above the map */
     }
 
 
