--- a/index.html
+++ b/index.html
@@ -170,7 +170,21 @@
       
       //view.ui.add(legend, "bottom-right");
 
+      document.addEventListener('DOMContentLoaded', function() {
+          var infoBtn = document.getElementById('info-btn');
+          var infoContainer = document.getElementById('info-container');
 
+          infoBtn.addEventListener('click', function() {
+              // Toggle the display of the info container
+              if (infoContainer.style.display === 'none' || infoContainer.style.display === '') {
+                  infoContainer.style.display = 'block';
+                  infoBtn.textContent = 'Hide Introduction';
+              } else {
+                  infoContainer.style.display = 'none';
+                  infoBtn.textContent = 'Show Introduction';
+              }
+          });
+      });
 
 
 
@@ -228,10 +242,17 @@
 
     #info-container {
         display: none;
-        margin-top: 20px;
-        padding: 10px;
+        margin-top: 5px;
+        padding: 5px;
         border: 1px solid #ccc;
         border-radius: 5px;
+    }
+
+    p {
+      margin-top: 5px; /* Remove margin from the top */
+      margin-bottom: 5px; /* Set margin at the bottom */
+      padding: 0; /* Remove padding */
+      font-size: 14px; /* Set font size */
     }
 
     #viewDiv {
@@ -246,8 +267,8 @@
 <body>
   <button id="info-btn">Show Introduction</button>
   <div id="info-container">
-      <h2>Web App Introduction</h2>
-      <p>This web app is designed to help users with...</p>
+      <!-- Add your background information here -->
+      <p>The Natural Disaster Monitor (NDM) is an application that uses ArcGIS Maps SDK for JavaScript and Survey123. It allows for real time submission of disaster occurrences through user submitted forms. First responders, land managers, surveyors, scientists, engineers, and other environmental professionals will be able to catalogue disasters in real time. It has the functionality to log disasters, distinguish basic disaster categories (hydrological, meteorological, climatological, and geophysical), and the feature layer produced through this application can be used to perform spatial analysis to understand the freequency of disaster types, and to understand which areas are more prone to certain types of disasters. The categorization of disasters in the database follows a similar format to the EM-DAT (Emergency Events Database) and the Geocoded Disasters Dataset (GDIS). The EM-DAT is a database that catalogues every major natural disaster around the world, with basic information such as death toll, monetary damage, injury total, etc. The Geocoded Disasters Dataset (GDIS) is a subset of EM-DAT that adds location information about a disaster.</p>
   </div>
 
   <script>
