--- a/index.html
+++ b/index.html
@@ -222,7 +222,9 @@
       background-color: #005a87;
     }
 
-
+    body {
+        background-color: #e5e5e5b7; /* Choose your desired background color */
+    }
 
     #info-btn {
         padding: 10px 20px; /* Adjust padding to make the button larger */
@@ -246,6 +248,7 @@
         padding: 5px;
         border: 1px solid #ccc;
         border-radius: 5px;
+        background-color: #d0d8deb7;
     }
 
     p {
